--- a/ui/registrar-usuario.ui
+++ b/ui/registrar-usuario.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1439</width>
+    <width>1031</width>
     <height>847</height>
    </rect>
   </property>
@@ -34,7 +34,7 @@ color: #957F5F;
 </string>
      </property>
      <property name="text">
-      <string>Agregar Usuario</string>
+      <string>Registrar Usuario</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -283,8 +283,8 @@ border: none;
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>614</width>
-          <height>44</height>
+          <width>410</width>
+          <height>70</height>
          </rect>
         </property>
         <property name="sizePolicy">
@@ -320,6 +320,17 @@ background:rgba(149,127,95);
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QCheckBox" name="checkBoxAllVer">
+           <property name="styleSheet">
+            <string notr="true">font: 75 16pt;
+color: white;</string>
+           </property>
+           <property name="text">
+            <string>Seleccionar todo</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </widget>
@@ -341,7 +352,7 @@ border: none;
           <x>0</x>
           <y>0</y>
           <width>365</width>
-          <height>44</height>
+          <height>70</height>
          </rect>
         </property>
         <property name="sizePolicy">
@@ -374,6 +385,17 @@ background:rgba(149,127,95);
            </property>
            <property name="alignment">
             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="checkBoxAllEscribir">
+           <property name="styleSheet">
+            <string notr="true">font: 75 16pt;
+color: white;</string>
+           </property>
+           <property name="text">
+            <string>Seleccionar todo</string>
            </property>
           </widget>
          </item>
