--- a/ui/registrar-usuario.ui
+++ b/ui/registrar-usuario.ui
@@ -147,22 +147,32 @@ background: white;
        </property>
        <item>
         <property name="text">
-         <string>Administrador</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Empleado</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
          <string>Proyectista</string>
         </property>
        </item>
        <item>
         <property name="text">
+         <string>Juridico</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Presupuesto</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Trámites</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
          <string>Armadores</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Administrador</string>
         </property>
        </item>
        <item>
