cambios a inputs, crear solo un archivo resource

--- a/ui/icons/imagenes.qrc
+++ b/ui/icons/imagenes.qrc
@@ -1,5 +1,8 @@
 <RCC>
   <qresource prefix="icons">
+    <file>search-line (1).png</file>
+    <file>arrow-down.png</file>
+    <file>arrow-down-brown.png</file>
     <file>logout-white.png</file>
     <file>logout-brown.png</file>
     <file>logout-box-r-line.png</file>
