--- a/ui/resources.qrc
+++ b/ui/resources.qrc
@@ -15,6 +15,7 @@
     <file>resources/icons/edit.png</file>
     <file>resources/icons/group.png</file>
     <file>resources/icons/logout.png</file>
+    <file>resources/icons/calendar.png</file>
     <file>resources/icons/menu.png</file>
     <file>resources/imagenes/carpeta.png</file>
     <file>resources/imagenes/undraw_team_up_re_84ok.svg</file>
