--- a/ui/ver-tabla.ui
+++ b/ui/ver-tabla.ui
@@ -17,70 +17,6 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
-      <widget class="QLabel" name="label">
-       <property name="styleSheet">
-        <string notr="true">font: 700 11pt &quot;Segoe UI&quot;;
-color: #957F5F;</string>
-       </property>
-       <property name="text">
-        <string>Tabla:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QComboBox" name="tableslist">
-       <property name="styleSheet">
-        <string notr="true">/* style for the QComboBox */
-#tableslist {
-border-radius: 11px;
-border: 2px solid #957F5F;
-background-color: white;
-color: #957F5F;
-height: 25px;
-padding: 0 15px;
-
-}
-
-/* style for drop down area */
-#tableslist::drop-down{
-border: 0px;
-}
-/* style for drop down arrow */
-#tableslist::down-arrow {
-image: url(:/resources/resources/icons/down-arrow-brown.png);
-width: 20px;
-height: 20px;
-margin-right: 15px;
-}
-/* style for QComboBox after open selcet menu */
-#tableslist:on {
-border: 1px solid #c2dbfe;
-}
-/* style for list menu */
-#tableslist QListView {
-font-size: 12px;
-border: 1px solid rgba(0, 0, 0, 10%);
-padding: 5px;
-background-color: #fff;
-outline: 0px;
-}
-
-/* style for list items */
-#tableslist QListView::item {
-padding-left: 10px;
-background-color: #fff;
-}
-#tableslist QListView::item:hover {
-background-color: #d3c393;
-}
-#tableslist QListView::item:selected {
-background-color: #d3c393;
-}
-</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QPushButton" name="botonModificar">
        <property name="styleSheet">
         <string notr="true">QPushButton {
@@ -189,6 +125,7 @@ border: 2px solid #957F5F;
 background-color: #957F5F;
 color: white;
 height: 25px;
+min-width:120px;
 padding: 0 15px;
 
 }
