--- a/ui/editar-registro.ui
+++ b/ui/editar-registro.ui
@@ -15,13 +15,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="leftMargin">
-    <number>200</number>
+    <number>100</number>
    </property>
    <property name="topMargin">
     <number>12</number>
    </property>
    <property name="rightMargin">
-    <number>200</number>
+    <number>100</number>
    </property>
    <property name="bottomMargin">
     <number>12</number>
@@ -34,27 +34,12 @@ color: #957F5F;
 </string>
      </property>
      <property name="text">
-      <string>Editar Registro</string>
+      <string>Vista de Formulario</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
-   </item>
-   <item>
-    <layout class="QVBoxLayout" name="verticalLayout_3">
-     <item>
-      <widget class="QLabel" name="label_tabla">
-       <property name="styleSheet">
-        <string notr="true">font: 18pt &quot;Arial Rounded MT Bold&quot;;
-color: #957F5F;</string>
-       </property>
-       <property name="text">
-        <string>Tabla:</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
    </item>
    <item>
     <widget class="QScrollArea" name="scrollArea">
@@ -135,7 +120,7 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>881</width>
+        <width>1081</width>
         <height>24</height>
        </rect>
       </property>
@@ -179,7 +164,6 @@ padding: 10px 30px;
 QPushButton:hover {
 	background-color: rgb(116, 91, 47);
 	color: rgb(255, 255, 255);
-	border: 3px solid  rgb(116, 91, 47);
 }
 
 QPushButton:pressed {
@@ -208,7 +192,6 @@ padding: 10px 30px;
 QPushButton:hover {
 	background-color: rgb(116, 91, 47);
 	color: rgb(255, 255, 255);
-	border: 3px solid  rgb(116, 91, 47);
 }
 
 QPushButton:pressed {
